Updated SnackBar provider to use `nav_host_fragment` view and move other variables from fragments.
Updated MainActivity to fix issue with recyclerview and snackbar not showing when logging in.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,11 @@ dependencies {
     implementation 'io.insert-koin:koin-android:3.5.0'
     implementation 'io.insert-koin:koin-androidx-navigation:3.5.0'
 
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "io.insert-koin:koin-test:3.5.0"
+    testImplementation "io.insert-koin:koin-test-junit4:3.5.0"
+    testImplementation "io.insert-koin:koin-test-junit5:3.5.0"
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
 }
