--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
 
     implementation 'androidx.security:security-crypto:1.0.0'
+    implementation 'com.scottyab:rootbeer-lib:0.0.7'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
@@ -74,6 +75,7 @@ dependencies {
     // Koin
     implementation 'io.insert-koin:koin-android:3.5.0'
     implementation 'io.insert-koin:koin-androidx-navigation:3.5.0'
+    implementation 'io.insert-koin:koin-androidx-workmanager:3.5.0'
 
     testImplementation "junit:junit:4.13.2"
     testImplementation "io.insert-koin:koin-test:3.5.0"
