--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            debuggable false
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -31,7 +34,6 @@ android {
     kotlinOptions {
         jvmTarget = '20'
     }
-
     buildFeatures {
         dataBinding true
         viewBinding true
@@ -47,7 +49,6 @@ dependencies {
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 
     //okhttp
@@ -66,8 +67,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.core:core-ktx:1.12.0'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
 
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.21"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
@@ -77,11 +78,13 @@ dependencies {
     implementation 'io.insert-koin:koin-androidx-navigation:3.5.0'
     implementation 'io.insert-koin:koin-androidx-workmanager:3.5.0'
 
-    testImplementation "junit:junit:4.13.2"
     testImplementation "io.insert-koin:koin-test:3.5.0"
     testImplementation "io.insert-koin:koin-test-junit4:3.5.0"
-    testImplementation "io.insert-koin:koin-test-junit5:3.5.0"
+    testImplementation "io.mockk:mockk:1.13.8"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 }
