--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.example.jampez.InstrumentationTestRunner"
     }
 
     buildTypes {
@@ -52,7 +53,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 
     //okhttp
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
 
 
@@ -61,6 +62,7 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.1'
 
     implementation 'androidx.room:room-runtime:2.6.1'
+    implementation 'androidx.test:runner:1.5.2'
     ksp 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
     implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
@@ -82,6 +84,8 @@ dependencies {
     testImplementation "io.insert-koin:koin-test-junit4:3.5.0"
     testImplementation "io.mockk:mockk:1.13.8"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
