--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
             resources.excludes.add("META-INF/LICENSE-notice.md")
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_20
         targetCompatibility JavaVersion.VERSION_20
@@ -69,6 +72,7 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.test:runner:1.5.2'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
     ksp 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
     implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
@@ -89,6 +93,7 @@ dependencies {
     testImplementation "io.insert-koin:koin-test:3.5.0"
     testImplementation "io.insert-koin:koin-test-junit4:3.5.0"
     testImplementation "io.mockk:mockk:1.13.8"
+    testImplementation 'org.robolectric:robolectric:4.11.1'
     androidTestImplementation "io.mockk:mockk-android:1.13.8"
     androidTestImplementation "io.insert-koin:koin-test:3.5.0"
     androidTestImplementation "io.insert-koin:koin-test-junit4:3.5.0"
